dates authors more

--- a/content/publication/lipkin-2022-lana/cite.bib
+++ b/content/publication/lipkin-2022-lana/cite.bib
@@ -2,7 +2,8 @@
  author = {Lipkin, Benjamin and Tuckute, Greta and Affourtit, Josef and Small, Hannah and Mineroff, Zachary and Kean, Hope and Jouravlev, Olessia and Rakocevic, Lara and Pritchett, Brianna and Siegelman, Matthew and Hoeflin, Caitlyn and Pongos, Alvincé and Blank, Idan A. and Kline Struhl, Melissa and Ivanova, Anna A and Shannon, Steven and Sathe, Aalok and Hoffmann, Malte and  Nieto-Castañón, Alfonso and Fedorenko, Evelina},
  journal = {Scientific Data},
  publisher = {Nature Publishing Group},
- title = {LanA (Language Atlas): A probabilistic atlas for the language network based on fMRI data from >800 individuals},
- year = {2022}
+ title = {Probabilistic atlas for the language network based on precision fMRI data from >800 individuals},
+ year = {2022},
+ volume = {9},
+ pages = {529}
 }
-
